--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about.html" class="active" aria-current="page">Über uns</a></li>
           <li><a href="/projects.html">Projekte</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li><a href="/kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </div>
@@ -87,7 +87,7 @@
         <h2>Mitmachen & Kontakt</h2>
         <p class="muted">Möchtest du mitmachen oder Fragen stellen? Schreib uns:</p>
         <p><a href="mailto:changeability@example.edu">changeability@example.edu</a></p>
-        <p class="muted" style="margin-top:.5rem">Green Lab Open Day: 15. November — Workshops & Mitmach-Aktionen</p>
+  <p class="muted" style="margin-top:.5rem">Green Lab Open Day: 15. November — Workshops & Mitmach-Aktionen</p>
       </aside>
     </div>
 
