--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="/" class="active" aria-current="page">Home</a></li>
           <li><a href="/about.html">Über uns</a></li>
           <li><a href="/projects.html">Projekte</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li><a href="/kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </div>
@@ -86,10 +86,7 @@
       </section>
     </div>
 
-    <section id="contact" class="container contact">
-      <h2>Kontakt</h2>
-      <p>Schreib uns: <a href="mailto:changeability@example.edu">changeability@example.edu</a></p>
-    </section>
+    <!-- Kontakt ist jetzt ausgelagert nach /kontakt.html -->
 
   </main>
 
@@ -103,7 +100,7 @@
         <ul>
           <li><a href="/about.html">Über</a></li>
           <li><a href="/projects.html">Projekte</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li><a href="/kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </div>
