--- a/kontakt.html
+++ b/kontakt.html
@@ -47,7 +47,7 @@
 
           <p class="muted">Hinweis: Dieses Formular öffnet dein Mailprogramm (mailto). Wenn du ein serverseitiges Formular möchtest, kann ich EmailJS / Formspree einbinden.</p>
 
-          <div style="display:flex;gap:.5rem;margin-top:.75rem">
+          <div class="actions" style="margin-top:.75rem">
             <button type="submit" class="btn primary"><span class="label">Nachricht senden</span></button>
             <a class="btn ghost" href="/">Abbrechen</a>
           </div>
