--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">Über uns</a></li>
           <li><a href="/projects.html" class="active" aria-current="page">Projekte</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li><a href="/kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </div>
