--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <a class="skip-link" href="#main">Skip to content</a>
   <header class="site-header">
     <div class="container header-grid">
-      <a href="/" class="logo"><img src="/assets/icons/logo.svg" alt="ChangeAbility" width="40" height="40"><span class="brand">ChangeAbility</span></a>
+  <a href="/" class="logo"><img src="/assets/icons/ChangeAbility_Logo_simple.png" alt="ChangeAbility" width="40" height="40"></a>
       <button id="nav-open" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Menü öffnen"><span class="hamburger" aria-hidden="true">☰</span></button>
       <nav id="primary-nav" class="nav" aria-hidden="true">
         <ul>
